--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -1,59 +1,43 @@
-.section {
-    display: flex;
-    flex-direction: column;
-}
-
-.item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.block {
+    text-align: center;
     margin-bottom: 20px;
+    position: relative;
 }
 
-.item.reverse {
-    flex-direction: row-reverse;
-}
-.item img {
-    width: 400px;
-    height: 400px;
-}
-
-.item div {
-    width: 50%;
-    padding: 20px;
-}
-
-h3, p {
+.block-title {
     margin: 0;
+    padding: 10px 0;
+    font-size: 3rem;
+    font-weight: normal;
 }
 
-.item ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
-
-.item li {
-    margin-bottom: 10px;
-}
-
-.item h3 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 100;
-  font-size: 3rem;
-}
-
-.item button {
-    display: block;
-    margin: 20px 2px;
+.block-text {
+    text-align: center;
+    font-size: 1.5rem;
+    margin: 0;
     padding: 10px 20px;
-    background-color: black;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
+    font-weight: 100;
 }
 
-.item button:hover {
-    background-color: #87373f;
+.content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+}
+
+.block-list {
+    font-size: 1.5rem;
+    text-align: left;
+    font-weight: 100;
+    flex-basis: 15%;
+    list-style-type: disc;
+    margin: 0;
+    padding-left: 10px;
+}
+
+.block-image {
+    flex-basis: 15%;
+    width: 90px;
+    height: 300px;
 }
