--- a/CSS/components/mainStart.css
+++ b/CSS/components/mainStart.css
@@ -4,10 +4,11 @@
 
 .info-box {
     font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
     font-weight: 100;
     position: absolute;
     width: 550px;
-    height: 300px;
+    height: 350px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
@@ -24,11 +25,13 @@
 
 .button-in-box {
     position: absolute;
+    margin: auto;
     bottom: 15px;
     right: 15px;
-    padding: 15px 25px;
+    padding: 20px 35px;
+    border-radius: 10px;
     background-color: black;
-    font-size: 15px;
+    font-size: 1.4rem;
     color: white;
     border: none;
     cursor: pointer;
@@ -49,7 +52,7 @@
 
 .info-box p {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .para_c1 {
