--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -94,6 +94,7 @@
     font-weight: 100;
     font-size: 2.2rem;
     letter-spacing: 2px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .block-list-button {
@@ -103,7 +104,15 @@
     width: 400px;
     border: 0;
     border-radius: 20px;
+    transition: background-color 0.3s, color 0.3s;
 }
+
+.block-list-button:hover {
+    background-color: rgba(0,0,0,0);
+    color: black;
+    
+}
+
 
 .block-list-text {
     margin: 5px;
