--- a/CSS/components/headerPic.css
+++ b/CSS/components/headerPic.css
@@ -8,14 +8,17 @@
     width: 100%;
 }
 
-.image_container_header_pic::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
+.image_container_header_pic {
+    overflow: hidden;
+    position: relative;
+    height: 800px; 
+}
+
+.headerPic {
+    position: relative;
     width: 100%;
-    height: 0.9rem;
-    background-color: white;
-    transform: translateY(-100%) translateY(1px);
-    margin-top: 10px;
+    bottom: 100px;
+    left: 0;
+    z-index: -1; 
+    pointer-events: none; 
 }
