--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -1,6 +1,102 @@
 .section_pricing {
     display: flex;
-    flex-direction: column; /* Stapelt die .block-Elemente vertikal */
-    align-items: center; /* Zentriert die .block-Elemente horizontal */
-    justify-content: center; /* Optional, falls Sie auch eine vertikale Zentrierung innerhalb des .section-Containers wünschen */
-  }
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+}
+
+.block_pricing_image {
+    height: 800px;
+    border-radius: 10px;
+}
+
+.training_type_list {
+    list-style-type: none;
+    font-weight: 100;
+    font-size: 1.8rem;
+}
+
+.training_type_list li {
+    margin: 0;
+}
+
+.training_type_list li {
+    position: relative; 
+    padding-left: 20px;
+}
+
+.training_type_list li::before {
+    content: '- '; 
+    position: absolute;
+    left: 0; 
+}
+
+.training_type_list p {
+    position: relative; 
+    padding: 0;
+}
+
+.gruppentraining {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.block_pricing {
+    width: 65%;
+    border: 2px solid #000; 
+}  
+
+.block_title_pricing {
+    text-align: center;
+    font-weight: normal;
+}
+
+.leistungen_typ_container {
+    margin-top: 20px;
+}
+
+select {
+    width: 300px; 
+    height: 60px; 
+    background-color: black; 
+    color: white; 
+    border: 1px solid black; 
+    font-size: 16px; 
+    -webkit-appearance: none; 
+    -moz-appearance: none;
+    appearance: none; 
+}
+
+select {
+    background: black url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="14" height="12" viewBox="0 0 18 18"><polygon fill="white" points="1,6 9,14 17,6" /></svg>') no-repeat right 10px center;
+    background-size: 14px 12px; 
+    padding-left: 10px; 
+    transition: background-color 0.3s, color 0.3s;
+}
+
+select:hover {
+    background-color: rgba(0,0,0,0);
+    color: black;  
+}
+
+select option {
+    background-color: white; 
+    color: black; 
+}
+
+.leistungen_type_button {
+    width: 140px; 
+    height: 60px; 
+    border: 0;
+    font-size: 16px; 
+    color: white;
+    background-color: black;
+    border: 1px solid black; 
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.leistungen_type_button:hover {
+    background-color: rgba(0,0,0,0);
+    color: black;   
+}
