--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -113,6 +113,7 @@
     width: 400px;
     border: 0;
     border-radius: 5px;
+    border: 1px solid black; 
     transition: background-color 0.3s, color 0.3s;
 }
 
