--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -1,21 +1,24 @@
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center; 
     background-color: black;
     padding: 10px;
+    height: 180px;
+    flex-wrap: wrap; 
 }
 
 .logo-container {
-    margin-right: 20rem;
+    flex-grow: 1;
+    margin-right: 1rem; 
 }
 
-.nav-item {
-    margin-right: 5rem;
+.nav-item:not(:last-child) {
+    margin-right: 1rem;
 }
 
 .nav-link {
-    font-size: 2rem;
+    font-size: 1.5rem; 
     text-decoration: none;
     color: white;
     padding: 10px;
@@ -25,22 +28,61 @@
     overflow: hidden;
 }
 
-.nav-link:after {
-    content: '';
-    display: block;
-    width: 90%;
-    height: 2px;
-    background-color: white;
-    position: absolute;
-    right: 5%;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-.nav-link:hover:after {
-    opacity: 1;
-}
-
 .logo-image {
-    width: 25rem;
+    width: 300px;
+    height: 150px;
+}
+
+/* Media Queries für verschiedene Geräte */
+@media (max-width: 1024px) { /* iPad Pro und kleinere Laptops */
+    .nav-link {
+        font-size: 1.2rem; /* Etwas kleinere Schrift */
+    }
+}
+
+@media (max-width: 768px) { /* iPad */
+    .nav-item {
+        margin-right: 0.5rem; /* Reduzierter Abstand */
+    }
+
+    .logo-image {
+        height: 40px; /* Etwas kleineres Logo */
+    }
+
+    .nav-link {
+        font-size: 1rem; /* Weitere Reduzierung der Schriftgröße */
+    }
+}
+
+@media (max-width: 480px) { /* iPhone */
+    .header {
+        padding: 5px; /* Reduziertes Padding */
+    }
+
+    .logo-container {
+        margin-right: 0.5rem; /* Reduzierter Rand */
+    }
+
+    .nav-item {
+        margin-right: 0.3rem; /* Minimale Abstände */
+    }
+
+    .nav-link {
+        font-size: 0.9rem; /* Kleine Schriftgröße für sehr kleine Bildschirme */
+    }
+
+    .logo-image {
+        height: 35px; /* Kleineres Logo */
+    }
+}
+
+@media (max-width: 330px) { /* Sehr kleine Geräte */
+    .logo-image {
+        height: 30px; /* Noch kleineres Logo */
+    }
+
+    .nav-link {
+        font-size: 0.8rem; /* Noch kleinere Schriftgröße */
+        padding: 5px; /* Reduziertes Padding */
+    }
 }
